# polyptych-studio

./: .envrc.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE-READINESS.md  SECURITY.md  image-presets.yaml  image_model_config.yaml  justfile  model_config.yaml  pipeline-presets.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: prompt-consistency-reviewer.md
.claude/hooks/: block-sensitive-files.sh  ruff-format.sh
.claude/skills/check-models/: SKILL.md
.claude/skills/check-status/: SKILL.md
.claude/skills/clean-source/: SKILL.md
.claude/skills/edit-output/: SKILL.md
.claude/skills/infographic/: SKILL.md
.claude/skills/new-style/: SKILL.md
.claude/skills/qa-test/: SKILL.md
.claude/skills/review-regen/: SKILL.md
.claude/skills/run-local-pipeline/: SKILL.md
.claude/skills/run-local-task/: SKILL.md
.claude/skills/run-pipeline/: SKILL.md
.claude/skills/suggest-style/: SKILL.md
.claude/skills/trace-prompt/: SKILL.md
.github/workflows/: ci.yml
docs/: index.md
docs/explanation/: critique-refine-pattern.md  multi-agent-patterns.md  operating-modes.md  pipeline-architectures.md  system-overview.md  task-decomposition.md
docs/how-to/: resume-pipeline.md  write-style-prompts.md
docs/reference/: cli-reference.md  pipeline-tier-optimization.md  text-client-api.md
docs/tutorials/: first-pipeline.md
examples/: about-polyptych-studio.md  scene.md
prompts/: 01-slide-analysis.md  image-gen.md
prompts/providers/: gemini-best-practices.md  openai-best-practices.md  xai-best-practices.md
prompts/style-transfer/anime/: anime-dark.md
prompts/style-transfer/editorial/: scholarly-monograph.md
prompts/style-transfer/infographic/: clean-minimalist.md  semi-flat-vector.md
prompts/style-transfer/noir/: cinematic-illustrative-noir.md
prompts/style-transfer/period-art/: attic-vase-pastoral.md
prompts/tasks/: task-01-genre-classification.md  task-02-source-analysis.md  task-03-structure-planning.md  task-04-content-allocation.md  task-05-visual-design.md  task-06-slide-specification-fiction.md  task-06-slide-specification.md  task-07-image-generation.md  task-critique.md  task-i0-analysis.md  task-i1-design.md  task-i2-critique.md  task-i2-prompts.md  task-i2-refine.md
scripts/: count-paragraphs.py  release.py
src/common/: compat.py  logging_setup.py  usage_log.py
src/polyptych/: __init__.py  _datafiles.py  batch_utils.py  clean_source.py  cli.py  client.py  concurrent_engine.py  cross_validate.py  ext.py  image_batch.py  logging_setup.py  model_config.py  pipeline.py  pipeline_base.py  pipeline_config.py  pipeline_infographic.py  pipeline_task.py  presets.py  prompt_loader.py  ref_utils.py  run_config.py  task_registry.py  text_utils.py  usage_log.py
src/polyptych/models/: __init__.py  infographic.py  slide.py
src/polyptych/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  vertex.py  xai.py
src/polyptych/tasks/: __init__.py  task_01_genre.py  task_02_analysis.py  task_03_structure.py  task_04_content.py  task_05_design.py  task_06_slides.py  task_07_prompts.py  task_i0_analysis.py  task_i1_design.py  task_i2_critique.py  task_i2_prompts.py
tests/: test_concurrent_engine.py  test_concurrent_engine_ordering.py  test_datafiles.py  test_ext.py  test_model_config.py  test_presets.py
tests/common/: test_compat.py
tests/polyptych/: conftest.py  mock_client.py  test_clean_source.py  test_cli.py  test_client.py  test_dependency_resolver.py  test_image_batch.py  test_infographic_critique.py  test_logging_setup.py  test_pipeline_base.py  test_pipeline_config.py  test_pipeline_infographic.py  test_pipeline_init.py  test_pipeline_resume.py  test_ref_utils.py  test_run_config.py  test_task_registry.py  test_text_utils.py
tests/polyptych/providers/: test_base.py  test_helpers.py
tests/polyptych/slide/: conftest.py  factories.py  test_character_canon.py  test_cross_validate.py  test_local_manifest.py  test_prompt_provider.py  test_schema_ergonomics.py  test_slide_image_paths.py  test_slide_pipeline_flow.py  test_task7_assembly.py
tests/polyptych/tasks/: test_task_05_design.py
