[project]
name = "polyptych"
version = "0.1.0"
description = "Turn a source text into visual media — slide decks and single-page infographics, with multi-provider text and image generation"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "google-genai>=1.0,<2",
    "pyyaml>=6.0,<7",
    "pydantic>=2.0,<3",
    "pillow>=12.0,<13",
    "openai>=2.0,<3",
    "requests>=2.28,<3",
    "anthropic>=0.40,<1",
    "pixbridge>=0.2.0",
]

[project.scripts]
polyptych = "polyptych.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/polyptych"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that call real external APIs (LLM, image generation)",
]

[tool.ruff]
# Pin target version to the declared minimum so version-specific syntax
# (e.g. PEP 695 generics, added in 3.12) is flagged rather than silently
# accepted by whatever interpreter happens to be running locally.
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Pyflakes (F) + a pragmatic pycodestyle (E) subset. This locks in the
# de-facto ruleset the codebase was already cleaned against; expand
# deliberately rather than letting the default drift.
select = ["E4", "E7", "E9", "F"]

[tool.pyright]
# Point pyright (CLI and LSP) at the uv-managed venv so it can resolve
# project deps (pixbridge, yaml, pydantic, etc.) without needing
# `uvx --with-editable .` wrappers.
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.14",
]
