[project]
name = "polyptych"
version = "0.2.0"
description = "Turn a source text into visual media — slide decks and single-page infographics, with multi-provider text and image generation"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Jörn Dinkla", email = "joern@dinkla.net" },
]
keywords = [
    "slides",
    "infographic",
    "presentation",
    "image-generation",
    "text-generation",
    "ai",
    "llm",
    "gemini",
    "openai",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "google-genai>=1.0,<2",
    "pyyaml>=6.0,<7",
    "pydantic>=2.0,<3",
    "pillow>=12.0,<13",
    "openai>=2.0,<3",
    "requests>=2.28,<3",
    "anthropic>=0.40,<1",
    "pixbridge>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/jdinkla/polyptych-studio"
Repository = "https://github.com/jdinkla/polyptych-studio"
Issues = "https://github.com/jdinkla/polyptych-studio/issues"
Changelog = "https://github.com/jdinkla/polyptych-studio/blob/main/CHANGELOG.md"

[project.scripts]
polyptych = "polyptych.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/polyptych"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle the repo-root runtime data into the wheel under polyptych/_data/ so a
# pip-installed package can find its config YAMLs and prompt templates (they
# live at the repo root in source form; _datafiles.data_root() resolves the
# bundled copy for wheels and falls back to the repo root for editable installs).
"prompts" = "polyptych/_data/prompts"
"model_config.yaml" = "polyptych/_data/model_config.yaml"
"image_model_config.yaml" = "polyptych/_data/image_model_config.yaml"
"image-presets.yaml" = "polyptych/_data/image-presets.yaml"
"pipeline-presets.yaml" = "polyptych/_data/pipeline-presets.yaml"

[tool.hatch.build.targets.sdist]
# Ship only what's needed to install, run, and rebuild/test the package.
# `generated/` is already absent (gitignored); this drops dev-only and heavy
# doc-asset paths that a PyPI consumer doesn't need. Keeps src/, tests/,
# prompts/, the *.yaml runtime configs, and the standard metadata files.
exclude = [
    "/docs",
    "/.claude",
    "/.github",
    "/examples",
    "/scripts",
    "/generated",
    "/justfile",
    "/uv.lock",
    "/.envrc.example",
    "/CLAUDE.md",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that call real external APIs (LLM, image generation)",
]

[tool.ruff]
# Pin target version to the declared minimum so version-specific syntax
# (e.g. PEP 695 generics, added in 3.12) is flagged rather than silently
# accepted by whatever interpreter happens to be running locally.
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Pyflakes (F) + a pragmatic pycodestyle (E) subset. This locks in the
# de-facto ruleset the codebase was already cleaned against; expand
# deliberately rather than letting the default drift.
select = ["E4", "E7", "E9", "F"]

[tool.pyright]
# Point pyright (CLI and LSP) at the uv-managed venv so it can resolve
# project deps (pixbridge, yaml, pydantic, etc.) without needing
# `uvx --with-editable .` wrappers.
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.14",
]
